--- a/upload.html
+++ b/upload.html
@@ -201,6 +201,7 @@
 
     <!-- Scripts -->
     <script src="https://cdn.sheetjs.com/xlsx-0.20.1/package/dist/xlsx.full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
     <script src="js/common.js"></script>
     <script src="js/upload.js"></script>
 </body>
